; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/usb/extr_mixer_quirks.c_snd_ftu_create_effect_feedback_ctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/usb/extr_mixer_quirks.c_snd_ftu_create_effect_feedback_ctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_mixer_interface = type { i32 }

@snd_ftu_create_effect_feedback_ctl.name = internal constant [23 x i8] c"Effect Feedback Volume\00", align 16
@USB_MIXER_U8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_mixer_interface*)* @snd_ftu_create_effect_feedback_ctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_ftu_create_effect_feedback_ctl(%struct.usb_mixer_interface* %0) #0 {
  %2 = alloca %struct.usb_mixer_interface*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.usb_mixer_interface* %0, %struct.usb_mixer_interface** %2, align 8
  store i32 6, i32* %3, align 4
  %7 = load i32, i32* @USB_MIXER_U8, align 4
  store i32 %7, i32* %4, align 4
  store i32 4, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %8 = load %struct.usb_mixer_interface*, %struct.usb_mixer_interface** %2, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @snd_create_std_mono_ctl(%struct.usb_mixer_interface* %8, i32 6, i32 4, i32 0, i32 %9, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @snd_ftu_create_effect_feedback_ctl.name, i64 0, i64 0), i32* null)
  ret i32 %10
}

declare dso_local i32 @snd_create_std_mono_ctl(%struct.usb_mixer_interface*, i32, i32, i32, i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
